// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should open the popover when the display value is clicked 1`] = `
<div
  class="select"
>
  <button
    class="displayValue"
    type="button"
  >
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="toggle su-angle-down"
    />
  </button>
</div>
`;

exports[`The component should open the popover when the display value is clicked 2`] = `
"<div>
  <div class=\\"backdrop fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <ul style=\\"top: 10px; position: fixed; pointer-events: auto; left: 10px;\\" class=\\"menu\\">
      <li>
        <button class=\\"option icon\\" style=\\"min-width: 210px;\\">Option 1</button>
      </li>
      <li>
        <button class=\\"option icon\\" style=\\"min-width: 210px;\\">Option 2</button>
      </li>
      <li class=\\"divider\\"></li>
      <li>
        <button class=\\"option icon\\" style=\\"min-width: 210px;\\">Option 3</button>
      </li>
    </ul>
  </div>
</div>"
`;

exports[`The component should render with an icon 1`] = `
<div
  class="select"
>
  <button
    class="displayValue hasIcon"
    type="button"
  >
    <span
      aria-label="su-plus"
      class="frontIcon su-plus"
    />
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="toggle su-angle-down"
    />
  </button>
</div>
`;

exports[`The component should render with the popover closed 1`] = `
<div
  class="select"
>
  <button
    class="displayValue"
    type="button"
  >
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="toggle su-angle-down"
    />
  </button>
</div>
`;
